--- a/app/src/style.css
+++ b/app/src/style.css
@@ -7,4 +7,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+}
+.DraggerLayout{
+    -webkit-transition: all 3.3s;
+    transition: all 3.3s;
 }
