--- a/app/src/style.css
+++ b/app/src/style.css
@@ -3,12 +3,13 @@
     height: 100px;
 } */
 
-.WrapDragger{
+.WrapDragger {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.DraggerLayout{
-    -webkit-transition: all 3.3s;
-    transition: all 3.3s;
+
+.DraggerLayout {
+    -webkit-transition: all .15s;
+    transition: all .15s;
 }
