--- a/app/src/style.css
+++ b/app/src/style.css
@@ -13,3 +13,16 @@
     -webkit-transition: all .15s;
     transition: all .15s;
 }
+
+.normal-layout {
+    border: 1px solid black;
+}
+
+.layout-item {
+    background: #391085;
+    height: 100%;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
