增添后台样式

--- a/src/NormalLayout/index.css
+++ b/src/NormalLayout/index.css
@@ -1,6 +1,10 @@
 .layout-Item {
     background: white;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
 }
 
 .layout-item:hover {
