更新用例，使得移动端也可以用

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
 .demo-button-layout {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 120px;
-    position: fixed;
 }
 
 .demo-button-layout>button {
@@ -11,6 +10,7 @@
     margin-top: 2px;
     border-radius: 5px;
     border: 1pt solid #1890ff;
+    margin-left: 20px;
 }
 
 body {
